--- a/arenda/index.html
+++ b/arenda/index.html
@@ -22,7 +22,7 @@ h2 {
 </style>
 </head>
 <body background="background.jpg" vlink="#000000" alink="#000000">
-<h1 align="center"><img src="../logo.gif" width="535" height="298" alt="Lenf for friends"/></h1>
+<h1 align="center"><img src="logo.gif" width="535" height="298" alt="Lenf for friends"/></h1>
 <h1 align="center">Аренда фото и видео техники</h1>
 <div align="center">
   <h2><a href="technic.html">Оборудование</a>&nbsp;| 
